--- a/web.html
+++ b/web.html
@@ -1,6 +1,6 @@
 <html>
     <head>
-        <center><h1>Objective Type Question Generator</h1></center>
+        <center><h1>Multiple Choice Type Question Generator</h1></center>
     </head>
     <body>
         <h2>Enter the text here :</h2>
